# tree-sitter-gpg-config

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-gpg.pc.in
bindings/c/tree_sitter/: tree-sitter-gpg.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_gpg/: binding.c
bindings/python/tree_sitter_gpg_config/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGPG/: gpg_config.h
bindings/swift/TreeSitterGPGTests/: TreeSitterGPGTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: config.txt
test/highlight/: gpg.conf
